--- a/.env
+++ b/.env
@@ -4,10 +4,18 @@ PORT=3000
 
 --- SMARTVEND HUB CREDENTIALS (NF-2.1.3, NF-2.1.2) ---
 
-HUB_URL=http://20.20.0.165:7400/tpService.php
+# Add or update this line in your .env file
+MOCK_HUB_RESPONSES="true"
+
+# Also, update the HUB_ENDPOINT to a safe placeholder to prevent future DNS errors:
+HUB_ENDPOINT="https://demo.vending-hub.com/tpService.php"
+
+
+# HUB_ENDPOINT=http://inhemeter.dyndns.org:9000/general/Interface/tpService.php
+
 TP_USERNAME=TP01
 TP_USERPASS=0123456789ABCDEF
-TP_SECRET_KEY=0123456789ABCDEF
+TP_SECRET_KEY=1234567890ABCDEF
 
 --- DATABASE CREDENTIALS (P1.1.D) ---
 
