--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "knex": "^3.1.0",
     "mysql2": "^3.9.7",
     "xml2js": "^0.6.2"
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
