--- a/.env
+++ b/.env
@@ -23,3 +23,5 @@ DB_HOST=localhost
 DB_USER=vending_app_user
 DB_PASSWORD=Qast_db12
 DB_NAME=vending_system_db
+
+JWT_SECRET=your_super_secret_key_123456
