--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "mysql2": "^3.9.7",
     "xml2js": "^0.6.2",
     "bcryptjs": "^3.0.3",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5"
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
