--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 --- CORE APPLICATION SETTINGS ---
 
-PORT=3001
+PORT=3000
 
 --- SMARTVEND HUB CREDENTIALS (NF-2.1.3, NF-2.1.2) ---
 
@@ -9,6 +9,7 @@ MOCK_HUB_RESPONSES="true"
 
 # Also, update the HUB_ENDPOINT to a safe placeholder to prevent future DNS errors:
 HUB_ENDPOINT="https://demo.vending-hub.com/tpService.php"
+
 
 
 # HUB_ENDPOINT=http://inhemeter.dyndns.org:9000/general/Interface/tpService.php
@@ -20,8 +21,6 @@ TP_SECRET_KEY=1234567890ABCDEF
 --- DATABASE CREDENTIALS (P1.1.D) ---
 
 DB_HOST=localhost
-DB_USER=vending_app_user
+DB_USER=root
 DB_PASSWORD=Qast_db12
 DB_NAME=vending_system_db
-
-JWT_SECRET=your_super_secret_key_123456
